# chat-tts-demo

./: README.md
backend/: .gitignore  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/src/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
