[project]
name = "chat-tts-demo-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Denver Hayward",email = "denver.hayward@smartspace.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
